﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-04-11
	Added: Network packet counter. Testing where and what would be best.
### 2019-04-07
	Added: Better logging of session end auto-exit.
### 2019-04-06
	Fixed: Null reference error in relation to watchlist. The internal cache was not treated correctly.
### 2019-03-30
	Changed: Paging is no longer misleadingly enabled in [Component] section and is instead in [Options].
	Fixed: Small typos.
	Fixed: IPv4 changes were not reacted to properly due to a typo.
	Internal: Variety of minor non-specific improvements.
### 2019-03-27
	Internal: Some major internal overhauling.
### 2019-03-25
	Fixed: IPC does not work.
	Added: Secondary TM process dialog cancellation now calls for refresh instead of nothing.
### 2019-03-19
	Fixed: System32 ignore warning was flipped.
	Changed: Default path visibility changed from invalid to process.
	Fixed: Array handling that was breaking new installations.
	Fixed: Main window lists GPU even if related component is disabled.
	Fixed: Empty arrays break things.
### 2019-03-18
	Internal: Restructuring. Should not affecting end-users.
### 2019-03-16
	Internal: Some small changes. Minor end-user effects that should not be very noticeable.
### 2019-03-15
	Changed: Maximum powerdown delay changed from 1 minute to 5 minutes.
	Changed: NVM warnings should be now more sane and uniform in presentation
	Changed: Watchlist item rename now actually renames it instead of recreating it. This removes a hack used for SharpConfig.
### 2019-03-14
	Internal: Various small config access improvements to minimize errors.
### 2019-03-13
	Replaced: SharpConfig with custom .ini handler.
### 2019-03-10
	Removed: --bootdelay argument. If delay is desired, task scheduler can be used for it.
	Fixed: Some message dialogs were positioned oddly at top-left corner of the screen.