@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.13...]
+### 2019-04-16
+	Added: Process start & exit logging. Configured per rule and disabled by default. (requested by Chairkicker Nick)
 ### 2019-04-11
 	Added: Network packet counter. Testing where and what would be best.
 ### 2019-04-07
